--- a/camb/readme.html
+++ b/camb/readme.html
@@ -12,7 +12,7 @@
 Code for Anisotropies in the Microwave Background by <A
 HREF="http://cosmologist.info/">Antony Lewis</A> and Anthony
 Challinor. <P>
-This version August 2006.
+This version September 2006.
 <P>
 <FONT SIZE=-1>
 Origially based on CMBFAST developed by Uros Seljak and Matias
@@ -83,10 +83,9 @@ You can <A HREF="http://camb.info/test_suite.tar.gz">download</A> a test suite f
 <A NAME="version">
 <H3>Version History</H3>
 
-
 <B>September 2006</B><BR>
-Fixed CAMB interface bug with tensor modes (since August version).<P>
-
+Fixed problem generating combinations of scalars and tensors in camb.f90 (since August version).
+<P>
 <B>August 2006</B><BR>
 Speeded calculation of lensed spectra and lensing power spectrum by using Limber approximation on small scales (no loss of accuracy). Fixed missing f_K in source term for non-flat lensing potential. Minor changes to default parameters and compatibility tweaks. Can <A HREF="http://camb.info/test_suite.tar.gz">download</A> test suite for comparing accuracy and code versions.
 <P>
