--- a/camb/readme.html
+++ b/camb/readme.html
@@ -12,7 +12,7 @@
 Code for Anisotropies in the Microwave Background by <A
 HREF="http://cosmologist.info/">Antony Lewis</A> and Anthony
 Challinor. <P>
-This version September 2006.
+This version November 2006.
 <P>
 <FONT SIZE=-1>
 Origially based on CMBFAST developed by Uros Seljak and Matias
@@ -82,6 +82,8 @@ You can <A HREF="http://camb.info/test_suite.tar.gz">download</A> a test suite f
 <P>
 <A NAME="version">
 <H3>Version History</H3>
+<B>November 2006</B><BR>
+Updated RECFAST to version 1.3 (0.1% effect on C<sub>l</sub>).
 
 <B>September 2006</B><BR>
 Fixed problem generating combinations of scalars and tensors in camb.f90 (since August version).
