--- a/readme.html
+++ b/readme.html
@@ -9,7 +9,7 @@
 <center>
 <h2>CosmoMC Readme </h2></center>
 
-<center><b>This version October 2006</b>. Check the <a href="http://cosmologist.info/cosmomc/">web
+<center><b>This version November 2006</b>. Check the <a href="http://cosmologist.info/cosmomc/">web
 page</a> for the latest version.<BR>
 </center>
 <P>
@@ -493,11 +493,15 @@ weighting function or parameter mapping.</ul>
 
 <A NAME="Version"><h2>Version History</h2></A>
 <UL>
-<LI><B>20th October 2006</B>
 
-Fixed k-scaling for SDSS LRG likelihood in mpk.f90. Changes for new version of WMAP likelihood code. Added <b>out_dir</b> and <b>plot_data_dir</b> options for GetDist. Minor compatibility fixes.
+
+<LI><B>November 2006</B>
+
+Fixed error msg in mpk.f90. Minor CAMB update.
 
 <LI><B>October 2006</B>
+<I>(20th October 2006)</i>Fixed k-scaling for SDSS LRG likelihood in mpk.f90. Changes for new version of WMAP likelihood code. Added <b>out_dir</b> and <b>plot_data_dir</b> options for GetDist. Minor compatibility fixes.
+<BR>
 Added support for SDSS LRG data (<A HREF="http://arxiv.org/abs/astro-ph/0608632">astro-ph/0608632</A>; thanks to Licia Verde, Hiranya Peiris and Max Tegmark). CAMB fixes and other minor changes.
 
 
