--- a/camb/readme.html
+++ b/camb/readme.html
@@ -102,6 +102,10 @@ where all quantities are in the synchronous gauge and evaluated at the requested
 <A NAME="version">
 <H3>Version History</H3>
 
+<B>January 2010</B><BR>
+Recfast updated to version 1.5 (rising to 2% change at l=2000; added rate fudge to match <A HREF="http://arxiv.org/abs/0910.4383">0910.4383</A>; use <b>RECFAST_Hswitch = F</b> to recover old result). Added <b>lens_potential_output_file</b> parameter to get sensibly normalized lensing potential ([l(l+1)]<sup>2</sup>C<sub>l</sub>/2&pi; and temperature correlation). Added code parameter do_bispectrum to modules.f90 for parameter tweaks to get accurate transfer functions for fnl calculations.
+<P>
+
 <B>February 2009</B><BR>
 Fixed serious bug in the calculation of lensed non-flat models (introduced in the Feb 2008 version).
 <P>
