CAMB bispectrum and updates

--- a/readme.html
+++ b/readme.html
@@ -501,6 +501,7 @@ weighting function or parameter mapping.</ul>
 
 <A NAME="Addons"><h2>Add-ons and extra datasets</h2></A>
 <UL>
+<LI><A HREF="http://www.physi.ch/lukas/Code.html">Python GetDist</A>
 <LI><A HREF="http://theory.physics.unige.ch/~ringeval/fieldinf.html">Field inflation</a> module for CosmoMC
 <LI><A HREF="http://zuserver2.star.ucl.ac.uk/~hiranya/ModeCode/">ModeCode</A> (Bayesian Parameter Estimation for Inflation)
 <LI><A HREF="http://www.slac.stanford.edu/~amantz/work/cosmomc_priors/">Run-time priors</A>
@@ -508,7 +509,7 @@ weighting function or parameter mapping.</ul>
 <LI><A HREF="http://background.uchicago.edu/camb_rpc/">Reionization principal components</A>
 <LI><A HREF="http://www.stanford.edu/~drapetti/fgas_module/">X-ray cluster gas mass fraction</A>
 <LI><A HREF="http://www.astro.caltech.edu/~rjm/cosmos/cosmomc/">COSMOS 3D weak lensing data</A>
-<LI><A HREF="http://astro.ic.ac.uk/~jaz/code/">python GetDist</A>
+<LI><A HREF="http://www-astro.physics.ox.ac.uk/~Zuntz/page4/page4.html">python GetDist</A>
 <LI><A HREF="http://lpsc.in2p3.fr/perotto/">FuturCMB</A> forecasting with CMB lensing
 <LI><A HREF="http://cosmonest.org">CosmoNest</A> Nested sampling add-on.
 <LI><A HREF="http://www.slosar.com/aslosar/lya.html">Lyman-alpha Forest Power Spectrum from the Sloan Digital Sky Survey</A>
